UX: Fix alignment in the channel settings

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -921,7 +921,7 @@ $float-height: 530px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
     justify-content: space-between;
     width: 650px;
     padding: 0.75em 0;
